--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-        {% block stylesheets %}
-            {{ encore_entry_link_tags('app') }}
-        {% endblock %}
 
-        {% block javascripts %}
-            {{ encore_entry_script_tags('app') }}
-            <script src="https://kit.fontawesome.com/e6a7279d9f.js" crossorigin="anonymous"></script>
-            <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-            
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    <title>Accueil Xtra-Copy Tournai </title>
+    <meta name="Content-Type" content="UTF-8">
+    <meta name="Content-Language" content="fr">
+    <meta name="Description"
+        content="Vous cherchez un centre d'impression de confiance à Tournai ? 
+Situé au cœur de la ville, à deux pas de la grand place, notre centre d'impression est également un point relais pour les livraisons de colis.">
+    <meta name="Copyright" content="xtra-copy.be">
+    <meta name="Geography" content="Tournai, Belgique, 7500">
+    <meta name="DC.Content-Type" content="UTF-8">
+    <meta name="DC.Content-Language" content="fr">
+    <meta name="DC.Description"
+        content="Vous cherchez un centre d'impression de confiance à Tournai ? 
+Situé au cœur de la ville, à deux pas de la grand place, notre centre d'impression est également un point relais pour les livraisons de colis.">
+    <meta name="DC.Copyright" content="xtra-copy.be">
+    <meta name="DC.Geography" content="Tournai, Belgique, 7500">
+    
+    {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
+    {% block stylesheets %}
+    {{ encore_entry_link_tags('app') }}
+    {% endblock %}
+
+    {% block javascripts %}
+    {{ encore_entry_script_tags('app') }}
+    <script src="https://kit.fontawesome.com/e6a7279d9f.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"
+        integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+
+    {% endblock %}
+</head>
+
+<body>
+    {% block body %}{% endblock %}
+</body>
+
 </html>
